# gecko2

./: .gitignore  CMakeLists.txt  README.md  block_loop_0.vtk  block_loop_1.vtk  block_loop_10.vtk  block_loop_11.vtk  block_loop_12.vtk  block_loop_13.vtk  block_loop_14.vtk  block_loop_15.vtk  block_loop_16.vtk  block_loop_17.vtk  block_loop_18.vtk  block_loop_19.vtk  block_loop_2.vtk  block_loop_20.vtk  block_loop_21.vtk  block_loop_22.vtk  block_loop_23.vtk  block_loop_24.vtk  block_loop_25.vtk  block_loop_3.vtk  block_loop_4.vtk  block_loop_5.vtk  block_loop_6.vtk  block_loop_7.vtk  block_loop_8.vtk  block_loop_9.vtk  block_loop_init.vtk  block_result.vtk.vtk  block_result_gloutonny_approach.vtk  blocking_0.json  blocking_1.json  blocking_10.json  blocking_11.json  blocking_12.json  blocking_13.json  blocking_14.json  blocking_15.json  (+76 more)
OUT_TESTS/: saveResults.txt  saveResultsBeforeSubTree.txt
OUT_TESTS/T_shape/: block_loop_0.vtk  block_loop_1.vtk  block_loop_2.vtk  block_loop_3.vtk  block_loop_4.vtk  block_loop_init.vtk  block_result.vtk  blocking_0.json  blocking_1.json  blocking_2.json  blocking_3.json  blocking_4.json  edge_loop_0.vtk  edge_loop_1.vtk  edge_loop_2.vtk  edge_loop_3.vtk  (+10 more)
blocking/: CMakeLists.txt
gmds_core/: CMakeLists.txt
gmds_core/quality/tst/: CMakeLists.txt  quality_hex_tests.cpp  quality_quad_tests.cpp
test_data/: encoches_final.vtk  params.json
valid/: changeCandDparams.py  check.py  checkListShapes.py  check_multi_run.py  multiRun_check.py  multiRun_check_list_Shapes.py  plotCandDboxplot.py  plotCandDmean.py  plots_CandD_var.py
(+740 files in other folders)
